--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: Compufiber
-email:
+email: consultas@compufiber.com
 description:
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
-
-twitter_username:
+url: "www.compufiber.com.py" # the base hostname & protocol for your site
+facebook: https://www.facebook.com/profile.php?id=100004236797951
